# humphrey

./: .gitignore  Dockerfile  README.md  README.rst  Vagrantfile  basic.py  compose.yaml  config.py  handlers.py  humphrey.py  pyproject.toml  requirements.txt  runner.py  setup.py  util.py  wormgas.py
.github/workflows/: build-helper-image.yaml  publish-release-to-pypi.yaml
ci/: gen.py
examples/: .gitignore  basic.py
humphrey/: __init__.py  humphrey.py
plugins/: config.py  eight_ball.py  flip.py  greet.py  rainwave.py  roll.py  title.py
src/humphrey/: __init__.py
