[build-system]
build-backend = "uv_build"
requires = ["uv-build>=0.9.14,<0.10.0"]

[project]
name = "humphrey"
version = "2025.0"
description = "An IRC client with no dependencies"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[[project.authors]]
name = "William Jackson"
email = "william@subtlecoolness.com"

[project.urls]
"Homepage" = "https://github.com/williamjacksn/humphrey"
"Issues" = "https://github.com/williamjacksn/humphrey/issues"

[dependency-groups]
dev = [
    "ruff>=0.14.7",
    "ty>=0.0.1a29",
    "uv-build>=0.9.14",
]
