[build-system]
build-backend = "uv_build"
requires = ["uv-build>=0.9.22,<0.10.0"]

[project]
name = "humphrey"
version = "2026.0"
description = "An IRC client with no dependencies"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[[project.authors]]
name = "William Jackson"
email = "william@subtlecoolness.com"

[project.urls]
"Homepage" = "https://github.com/williamjacksn/humphrey"
"Issues" = "https://github.com/williamjacksn/humphrey/issues"

[dependency-groups]
dev = [
    "ruff>=0.14.11",
    "ty>=0.0.10",
    "uv-build>=0.9.22",
]

[tool.ruff.lint]
select = ["ANN", "E", "F", "FURB", "I", "PERF", "RUF", "S", "UP"]
